# Meta-Ads-MCP

./: .env.example  .gitignore  config.py  constants.py  pyproject.toml  requirements.txt  server.py
core/: __init__.py  insights.py  meta_client.py  optimiser.py  report.py  safety.py
models/: __init__.py  inputs.py  meta.py  outputs.py
persistence/: __init__.py  action_log.py  report_cache.py
tests/: test_meta_client.py  test_optimiser.py  test_tools.py
tests/fixtures/: sample_insights.json
tools/: __init__.py  account_tools.py  adset_tools.py  campaign_tools.py  data_tools.py  optimiser_tools.py  report_tools.py  write_tools.py
