[project]
name = "meta-ads-mcp"
version = "1.0.0"
description = "Meta Ads operations: insights, optimiser, apply changes via MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0",
    "fastapi",
    "uvicorn",
    "httpx>=0.27",
    "tenacity>=8.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "pytz",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "models", "persistence", "tools", "server.py", "config.py", "constants.py"]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]